# ewan-openclaw-windows-installer

./: .gitignore  CHANGES_v1.2.16.md  CHANGES_v1.2.18.md  README.md  build.json  ewan-openclaw-setup.iss  preview-onboarding.html
config/: temp_config.bat
docs/: changes-2026-03-12.md  changes-applied.md
ewan-openclaw-launcher/: Cargo.toml  README.md  build.rs
ewan-openclaw-launcher/src/: autostart.rs  config.rs  health.rs  main.rs  main.rs.bak  onboarding.rs  tray.rs  wsl.rs
scripts/: check.bat  docker-run-test.sh  docker-start.sh  install.bat  install_gateway.bat  install_wsl_components.bat  restart.bat  set_config.bat  setup_checks.pas
